--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -8,6 +8,7 @@
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +25,26 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-height: 500px;
+  margin-top: 128px;
 }
 
 .controlColumn {
+}
+
+.backgroundBar{
+  position: fixed;
+  background-color: lightgray;
+  left: 0;
+  right: 0; 
+  bottom: 0; 
+  height: 40%;
+  margin: auto;
+  z-index: -1;
+  padding-bottom: 72px;
 }
